--- a/views/home.hbs
+++ b/views/home.hbs
@@ -128,29 +128,8 @@
                 </form>
                 <button id="submitbutt" onclick="submitForms()"> Submit</button>
 
-                <button class="collapsible" onclick="fridgeToggle()"> FRIDGE</button>
+                <button class="collapsible" onclick="fridgeOpen()"> FRIDGE</button>
 
-                <div id="fridge">
-                    <div id="tempBox"></div>
-                    <input type="text" id="inputBox">
-                    <button id="default">Default</button>
-                    <button id="fridgeDelete">Delete</button>
-
-                    <div id="fridgeDisplay">
-                        <div id="fridgeBG">
-                            <div id="topDoor"></div>
-                            <div id="botDoor"></div>
-                            <div id="topClose"></div>
-                            <div id="botClose"></div>
-                        </div>
-                        <div id="freezer">
-
-                        </div>
-                        <div id="contents">
-
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
@@ -194,11 +173,33 @@
             </div>
         </div>
     </div>
-
 </div>
+
+<div id="fridge">
+    <div id="tempBox"></div>
+    <input type="text" id="inputBox">
+    <button id="default">Default</button>
+    <button id="fridgeDelete">Delete</button>
+    <button type="button" class="close" aria-label="Close" onclick="fridgeClose()">
+        <span aria-hidden="true">&times;</span>
+    </button>
+
+    <div id="fridgeDisplay">
+        <div id="fridgeBG">
+            <div id="topDoor"></div>
+            <div id="botDoor"></div>
+            <div id="topClose"></div>
+            <div id="botClose"></div>
+        </div>
+    <div id="freezer"></div>
+    <div id="contents"></div>
+    </div>
+</div>
+
 
 <script src="../js/favourites.js"></script>
 <script src="../js/displays.js"></script>
+<script src="../js/fridge2.js"></script>
 <script src="../js/fridge.js"></script>
 <script src="../js/utils.js"></script>
 <script> setFavouriteRecipes("{{favRecipes}}")</script>
