--- a/public/css/fridge.css
+++ b/public/css/fridge.css
@@ -32,11 +32,13 @@
 
 #fridgeDisplay {
     position: absolute;
-    top: 50px;
-    left: 20px;
+    top: 0px;
+    left: 0px;
+    bottom: 0px;
+    right: 0px;
+    margin: auto;
     width: 700px;
     height: 507px;
-    background-color: pink;
 }
 
 .contents {
@@ -67,8 +69,13 @@
 }
 
 #fridge {
-    position: relative;
-    background-color: pink;
-    height: 600px;
     display: none;
+    height: 600px;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.4);
 }
